# SatDump

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows_build.yml
src-cli/: main.cpp
src-core/: CMakeLists.txt  logger.cpp  logger.h  module.cpp  module.h  pipe.h  pipeline.cpp  pipeline.h
src-core/modules/: buffer.h  module_bpsk_demod.cpp  module_bpsk_demod.h  module_fsk_demod.cpp  module_fsk_demod.h  module_qpsk_demod.cpp
src-core/modules/aqua/: module_aqua_db_decoder.cpp
src-core/modules/common/differential/: nrzm.cpp
src-core/modules/common/dsp/: file_source.cpp
src-core/modules/common/dsp/lib/: clock_recovery_mm.h
src-core/modules/common/sathelper/: correlator.cpp  viterbi27.cpp
src-core/modules/common/viterbi_lib/: metrics.cpp  tab.cpp
src-core/modules/eos/instruments/modis/: modis_reader.cpp
src-core/modules/fengyun/: ahrpt_viterbi.cpp  module_fengyun_ahrpt_decoder.cpp
src-core/modules/meteor/: ccsds.h
src-core/modules/noaa/: module_noaa_dsb_demod.cpp  module_noaa_hrpt_demod.cpp
src-ui/: CMakeLists.txt  fft.cpp  fft.h  main.cpp  processing.h
src-ui/sdr/: airspy.h  sdr.h
